# BSLMap

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  repo_structure.txt  run_debug.sh  test_extraction.py  test_simple_extraction.py
cli/: consolidate.py  corpus.py  extract.py  geo.py  harvest.py
config/: institutions.txt  pathogen_keywords.txt  prompt.md  settings.toml
data/: labs.csv
data/gold/: extracted_labs.csv  labs.geojson
data/silver/: corpus.jsonl  extractions.jsonl  extractions_test.jsonl
scripts/: generate_labs_csv.py
src/bslmap/: build_corpus.py  cfg.py  consolidate_extractions.py  extract_with_llm.py  geojson.py  harvest_eupmc.py  harvest_pubmed.py  io_utils.py
web/backend/: requirements.txt
web/backend/app/: main.py
web/backend/app/routers/: labs.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.jsx  index.css  main.jsx  theme.js
web/frontend/src/components/: LabDetails.jsx  Map.jsx  NavBar.jsx  Sidebar.jsx
web/frontend/src/pages/: MapPage.jsx
web/frontend/src/services/: api.js
