[project]
name = "bslmap"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pandas>=2",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
disallow_untyped_defs = true
strict = false