[project]
name = "bslmap"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pandas>=2",
  "tqdm>=4.65",
  # Web framework
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.6",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-dotenv>=1.0.0",
  "geojson-pydantic>=0.6.0",
  "pydantic[email]>=2.0.0",
  "email-validator>=2.0.0",
  # Data processing
  "numpy>=1.24.0",
  "geopandas>=0.13.0",
  "shapely>=2.0.0",
  # Async database
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.28.0",
  "aiosqlite>=0.19.0",
  # Security
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  # Utils
  "python-slugify>=8.0.0",
  "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "types-python-dateutil>=2.8.0",
  "types-pyyaml>=6.0.0",
  "types-requests>=2.0.0",
  "types-pytz>=2023.3.0",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
disallow_untyped_defs = true
strict = false